# Byte

./: .gitignore  AddProjectFile.ps1  CMakeLists.txt  ProjectBase.sln  desktop.ini
ByteCore/: CMakeLists.txt
ByteCore/include/ByteCore/Core/: Window.h
ByteCore/include/ByteCore/Modules/: ThreadPool.h  Tracer.h
ByteCore/include/ByteCore/Temp/: ImGuiLayer.h
ByteCore/src/: main.cpp
ByteCore/src/Core/: Window.cpp
ByteCore/src/Modules/: Tracer.cpp
ByteCore/src/Temp/: ImGuiLayer.cpp
ProjectBase/: FunctionalityTimer.h  ProjectBase.vcxproj  ProjectBase.vcxproj.filters  ThreadPool.h  Tracer.cpp  Tracer.h  main.cpp  trace.json
ProjectBase/x64/Debug/: ProjectBase.exe.recipe  ProjectBase.ilk  vc143.idb
ProjectBase/x64/Debug/ProjectBase.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProjectBase.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
